FoodDelivery/food-delivery/src/index.css
/* app */
.main {
    display:flex;
    flex-direction:column;
    align-items:center;
}


/* app2 */
.main2 {
    display:flex;
    justify-content:center;
}

img {
    width:100%;
}
 .insideContainer {
    width:250px;
    border:2px solid black;
 }

 .insideContainer:hover {
    scale:1.1;
 }

 .insideContainer2 {
    border:2px solid black;
 }

 .accrodianHeader {
    display:flex;
    justify-content: space-between;
    margin-bottom:5px;
    padding:4px;
 }

 .btn {
    height:20px;
    align-self:center;
    border-radius:30%;
 }

 .accordian {
    margin-bottom: 20px;
    padding: 10px;
    border:1px solid grey;
 }

 .app4 {
    display:flex;
    justify-content:center;
    height: 100px;
    align-items: center;
 }

 .round-div {
    border:2px solid black;
    width:20px;
    height:15px;
    border-radius:50%;
    margin-right:3px;
 }

 .round-div:hover {
    background-color: black !important;
    cursor: pointer;
 }

 .stepper, .round {
   display:flex;
   justify-content: center;
   align-items:center;
 }

 .round {
   width: 50px;
   height: 40px;
   border:2px solid black;
   border-radius: 50%;
 }

 .line {
   width:300px;
 }

 .cart {
      display:flex;
      margin-left: 90px;
      width:85%;
   justify-content: space-between;

 }

 .label {
   padding-top: 40px;
 }

 .cart-btn {
   margin-right: 15px;
 }

 .grid {
   display:grid;
   grid-template-areas:"red red green yellow yellow yellow"
                        "black black black pink pink pink";
   /* grid-template-columns:2fr 1fr 3fr; */
   /* border:2px solid black; */
 }

 .grid>div{
   /* width:100px; */
   height:100px;
   /* background-color: red; */
   border:2px solid black;
 }
.item1 {
   grid-area:red;
   background-color: red;
}
.item2 {
   grid-area:green;
   background-color: green;
}
.item3 {
   grid-area:yellow;
   background-color: yellow;
}
.item4{
   grid-area:black;
   background-color: black;
}
.item5{
   grid-area:pink;
   background-color: pink;;
}
 /* .item4 {
   grid-row:2/3;
   grid-column:1/3;
 } */

 .mainBox {
   display:flex;
   flex-direction:column;
   align-items:center;
 }

 .mainBox >input {
   width:40%;
   height:30px;
 }

 .innerBox {
   align-items:flex-start;
   padding: 20px;
   margin:4px;
 }

body {
   display:flex;
   justify-content:center;
}

 .outerDiv {
   background-color:black;
   padding:20px;
   border-radius:10px;
 }

 .outerDiv>div {
   width:50px;
   height:50px;
   margin-bottom:10px;
   border-radius:50%;
 }

